2007-03-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* PROBLEMS: describe crash when inserting or displaying a TAB.
	Thanks to Aidan Kehoe for the diagnosis.

2006-12-24  Stephen J. Turnbull  <stephen@xemacs.org>

	* configure.ac (ar): Sun has it but hides it; check for it.
	(ssize_t): Use the modern check and document todo.

2007-02-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* configure.ac (canna):
	Move #define of CANNA_NEW_WCHAR_AWARE to config.h.
	Use -DCANNA_NEW_WCHAR_AWARE since check for RK.h fails otherwise.
	Refactor into loops over orthogonal tweaks (prefix and define).
	Use have_canna to track detection success, not with_canna.
	Add AC_MSG_WARNs documenting autoconf's bogosity (ours, too).

2007-01-01  Malcolm Purvis  <malcolmp@xemacs.org>

	* aclocal.m4 (XE_SHLIB_STUFF): Use $EGREP instead of egrep.

2006-12-28  Malcolm Purvis  <malcolmp@xemacs.org>

	* configure.ac: Ensure ac_configure_args contains a leading space
	to work around problems with 'config.status --recheck' under
	autoconf 2.60 and 2.61.

2006-12-27  Malcolm Purvis  <malcolmp@xemacs.org>

	* configure.ac (XE_MERGED_ARG): Register --enable and --with forms
	with the option checking list.

2006-12-19  Stephen J. Turnbull  <stephen@xemacs.org>

	* Makefile.in.in (${srcdir}/configure): Generated from configure.ac.

2006-12-06  Dr. Volker Zell  <Dr.Volker.Zell@oracle.com>

	* configure.ac: Check for u_int*_t typedefs.

2006-12-06  Dr. Volker Zell  <Dr.Volker.Zell@oracle.com> 
 
	* configure.ac: Avoid using Motif for cygwin. 

2006-11-23  Mike Sperber  <mike@xemacs.org>

	* configure.ac (XE_EXPAND_VARIABLE): Fully expand the various
	directories before comparing them for figuring out which of them
	are user-defined.  Use XE_EPXAND_VARIABLE macro created for this
	purpose where applicable.

2006-12-07  Rick Rankin <rick.rankin@yahoo.com>

	* configure.ac: Add new library name for cygwin's xpm.

2006-12-07  Rick Rankin <rick.rankin@yahoo.com>
